--- a/src/content/graphos/enterprise/supergraph-architecture-framework/developer-experience.mdx
+++ b/src/content/graphos/enterprise/supergraph-architecture-framework/developer-experience.mdx
@@ -12,22 +12,22 @@ This pillar sets the stage for a platform that's both developer-friendly and cut
 
 ### Keep teams up to date with schema changes
 
-Your GraphQL schema acts as a contract between graph developers and consumers, so it's key that everyone stays up-to-date with changes.
+Your GraphQL schema acts as a contract between graph contributors and consumers, so it's necessary that everyone stays up-to-date with changes.
 Automating schema change notifications streamlines communication by not relying on manual updates.
 This reduces the risk of errors and improves developer efficiency.
 It allows teams across the stack to adapt their workflows to accommodate the changes.
 
 Automated notifications also facilitate stakeholder awareness.
-This means stakeholders can provide feedback or raise concerns, fostering a more collaborative and transparent development process.
+That means stakeholders can provide feedback or raise concerns, fostering a more collaborative and transparent development process.
 
 ### Enable subgraph developers
 
 To enhance overall developer efficiency, it's vital to reduce time-to-market for subgraph developers.
-These best practices can help:
+Best practices include:
 
-- Offer clear documentation outlining workflows for common failure scenarios like publish failures or failed schema checks.
-- Validate subgraph schemas during development to catch errors early, and ensure errors are surfaced for quick debugging.
-- Implement a standard continuous integration and delivery system to streamline deployment, cutting down the time needed to launch a supergraph.
+- Offering clear documentation outlining workflows for common failure scenarios like publish failures or failed schema checks
+- Validating subgraph schemas during development to catch errors early, and ensuring errors are surfaced for quick debugging
+- Implementing a standard continuous integration and delivery system to streamline deployment, cutting down the time needed to launch a supergraph
 
 By following these practices, supergraph contributors can iterate and innovate faster.
 
