--- a/src/content/graphos/enterprise/supergraph-architecture-framework/operational-excellence.mdx
+++ b/src/content/graphos/enterprise/supergraph-architecture-framework/operational-excellence.mdx
@@ -6,7 +6,7 @@ description: Learn best practices for GraphQL schema design, organization struct
 
 The **Operational Excellence** pillar focuses on subgraph and stewardship team enablement.
 This pillar's best practices outline how to effectively build and manage GraphQL schemas.
-They also cover how create governance programs.
+They also cover how to create governance programs.
 These practices and programs build trust in the graph for both subgraph and client developers alike.
 
 ## Principles
