--- a/src/content/graphos/enterprise/supergraph-architecture-framework/performance.mdx
+++ b/src/content/graphos/enterprise/supergraph-architecture-framework/performance.mdx
@@ -38,7 +38,7 @@ By optimizing their subgraphs, developers can reduce the load on the supergraph 
 
 ### Find opportunities to improve performance
 
-Observability tools can be helpful in identifying opportunities to improve the supergraph's performance.
-Resolver execution metrics and distributed traces can help developers can understand and optimize the performance of individual components.
+Observability tools can be invaluable in identifying opportunities to improve the supergraph's performance.
+Resolver execution metrics and distributed traces aid developers in understanding and optimizing the performance of individual components.
 Additionally, operation traces can help identify bottlenecks and inefficiencies across the system.
-By leveraging these observability tools, teams can proactively identify and address performance issues before they impact end-users.
+By leveraging these observability tools, teams can proactively address performance issues before they impact end-users.
