--- a/src/content/graphos/enterprise/supergraph-architecture-framework/reliability.mdx
+++ b/src/content/graphos/enterprise/supergraph-architecture-framework/reliability.mdx
@@ -5,7 +5,7 @@ description: Boost your federated GraphQL API's reliability via effective testin
 ---
 
 The **Reliability** pillar focuses on making your supergraph resilient to change.
-That means ensuring that it's appropriately resourced and scaled, observable, and production-ready.
+That means ensuring it's appropriately resourced and scaled, observable, and generally production-ready.
 These pillar's best practices build confidence in your supergraph's availability to graph consumers.
 They also ensure your graph is a trusted source of data in your organization.
 
