More OpEx edits

--- a/src/content/graphos/enterprise/supergraph-architecture-framework/operational-excellence.mdx
+++ b/src/content/graphos/enterprise/supergraph-architecture-framework/operational-excellence.mdx
@@ -4,9 +4,8 @@ subtitle: Efficiently operate, monitor, and manage your supergraph
 description: Learn best practices for GraphQL schema design, organization structure, standards enforcement, and supergraph scaling and health maintenace.
 ---
 
-The **Operational Excellence** pillar focuses on subgraph and stewardship team enablement.
-This pillar's best practices outline how to effectively build and manage GraphQL schemas.
-They also cover how to create governance programs.
+The **Operational Excellence** pillar focuses on empowering subgraph and stewardship teams.
+This pillar's best practices outline how to effectively build and manage GraphQL schema and how to create governance programs.
 These practices and programs build trust in the graph for both subgraph and client developers alike.
 
 ## Principles
@@ -17,7 +16,7 @@ GraphQL schemas are the cornerstone of GraphQL.
 Schemas enable both front- and backend teams to understand the available data.
 They also describe how clients request the data they care about.
 It's important that schemas are well-designed to avoid developer frustration.
-The best practices in this principle cover schema design best practices.
+This principle's best practices encompass essential guidelines for optimal schema design.
 
 ### Structure the organization to support best practices
 
@@ -26,14 +25,13 @@ This can happen due to the multitude of teams contributing to the graph.
 Whether issues stem from schema design evolution or graph ownership, they can create friction and hamper developer velocity.
 
 The best practices in this principle cover how to enable graph stewardship teams and make them effective.
-They also explain how to think about the supergraph as a product rather than a shared service.
+They also explain how to think about the supergraph as a product, rather than a shared service.
 
 ### Scale the supergraph
 
 GraphQL Federation is a new concept for many organizations.
 It's important for teams to deeply understand implementation and scaling.
-The best practices in this principle help organizations understand how to build and maintain the supergraph.
-This ensures it's a successful tool for building new experiences quickly.
+The best practices in this principle help organizations understand how to build and maintain the supergraph so that it's a successful tool for building new experiences quickly.
 
 ### Enforce subgraph standards and best practices
 
@@ -45,6 +43,5 @@ The best practices in this principle show how to effectively enforce standardsâ€
 
 The creation of a supergraph isn't confined to a single instance in time.
 Instead, as with GraphQL as a whole, it's intended to evolve.
-Subgraph teams should think about how they build today and how they may need to build in the future.
-They should also keep in mind how future changes affect graph consumers.
+Subgraph teams should be thinking about not only how they build today, but how they may need to build in the future, and how changes may affect graph consumers.
 This principle's best practices help teams build effective processes and tools to understand their supergraph's health.
