--- a/src/content/graphos/enterprise/supergraph-architecture-framework/developer-experience.mdx
+++ b/src/content/graphos/enterprise/supergraph-architecture-framework/developer-experience.mdx
@@ -5,14 +5,14 @@ description: Enhance developer productivity with GraphQL Federation via streamli
 ---
 
 The **Developer Experience** pillar focuses on enhancing developer productivity and satisfaction.
-It promotes collaboration via effective schema management and streamlined workflows.
-This pillar sets the stage for a platform that's both developer-friendly and cutting-edge, ensuring all developers can contribute efficiently.
+This pillar promotes collaboration via effective schema management and streamlined workflows.
+It sets the stage for a platform that's both developer-friendly and cutting-edge, ensuring all developers can contribute efficiently.
 
 ## Principles
 
 ### Keep teams up to date with schema changes
 
-Your GraphQL schema acts as a contract between graph contributors and consumers, so it's necessary that everyone stays up-to-date with changes.
+Your GraphQL schema acts as a contract between graph contributors and consumers, so it's important that everyone stays up-to-date with changes.
 Automating schema change notifications streamlines communication by not relying on manual updates.
 This reduces the risk of errors and improves developer efficiency.
 It allows teams across the stack to adapt their workflows to accommodate the changes.
@@ -25,26 +25,27 @@ That means stakeholders can provide feedback or raise concerns, fostering a more
 To enhance overall developer efficiency, it's vital to reduce time-to-market for subgraph developers.
 Best practices include:
 
-- Offering clear documentation outlining workflows for common failure scenarios like publish failures or failed schema checks
-- Validating subgraph schemas during development to catch errors early, and ensuring errors are surfaced for quick debugging
-- Implementing a standard continuous integration and delivery system to streamline deployment, cutting down the time needed to launch a supergraph
-
-By following these practices, supergraph contributors can iterate and innovate faster.
+- Offering clear documentation on workflows for common failure scenarios like publish failures or failed schema checks
+- Validating subgraph schemas during development to catch errors early
+- Ensuring errors are surfaced for quick debugging
+- Implementing a standard continuous integration and delivery system
 
 ### Enable client developers
 
 Improving client application development velocity is key to staying competitive.
-To achieve this, client developers need access to three things: accurate documentation, testing best practices, and uniform tooling for code generation.
+To achieve this, client developers need access to accurate documentation, testing best practices, and uniform tooling for code generation.
+
+Deploying and publishing frequently to lower environments can also help to identify and resolve issues early.
+Additionally, using mocking before graph implementation and providing access to the schema can further improve velocity. Finally, contracts can provide focused documentation and tooling to help streamline the development process.
 
 ### Use the supergraph to improve distributed systems
 
 It's essential for any organization using GraphQL Federation to embrace best practices for microservices and distributed systems.
 These best practices include:
 
-- Documenting a framework for splitting responsibilities across subgraphs and entity resolvers
+- Documenting a framework for splitting responsibilities across subgraphs
+- Documenting best practices for entity resolvers
 - Using GraphQL Federation appropriately for cross-domain orchestration
-
-By following these practices, developers can improve the efficiency of their systems.
 
 ### Onboard graph consumers and contributors
 
