--- a/src/content/graphos/enterprise/supergraph-architecture-framework/reliability.mdx
+++ b/src/content/graphos/enterprise/supergraph-architecture-framework/reliability.mdx
@@ -5,8 +5,8 @@ description: Boost your federated GraphQL API's reliability via effective testin
 ---
 
 The **Reliability** pillar focuses on making your supergraph resilient to change.
-That means ensuring it's appropriately resourced and scaled, observable, and generally production-ready.
-These pillar's best practices build confidence in your supergraph's availability to graph consumers.
+That means ensuring it's appropriately resourced, observable, and generally production-ready.
+These pillar's best practices build confidence in your supergraph's availability for graph consumers.
 They also ensure your graph is a trusted source of data in your organization.
 
 ## Principles
@@ -33,14 +33,14 @@ By monitoring pod metrics and graph execution metrics, you can identify optimiza
 ### Catch problems before they go into production
 
 One of the best ways to avoid production outages is to catch potential problems early in the development lifecycle.
-This approach lets you address issues before they impact production, ensuring system reliability and stability.
-These proactive measures can save time and resources and help avoid costly downtime and customer dissatisfaction.
+This approach lets you address issues before they impact production, ensuring system stability.
+These proactive measures can save time and resources and help avoid costly downtime and unhappy customers.
 
 ### Identify issues in production
 
 Lowering mean-time-to-recover (MTTR) in your supergraph is crucial for maintaining the system reliability.
 By proactively monitoring and addressing issues, you can minimize the impact of downtime on your users.
-Proactive monitoring also ensures your system is always available and performing as expected.
+Additionally, tracking and analyzing metrics such as error rates and response times can identify potential issues before they become critical problems.
 
 ### Prevent issues in production
 
@@ -53,4 +53,3 @@ Best practices include:
 - Staying up-to-date with the latest industry trends and best practices
 
 Teams can minimize the risk of production outages by being proactive about infrastructure and process choices.
-These practices ensure that their systems remain reliable and available.
