--- a/src/content/graphos/enterprise/supergraph-architecture-framework/security.mdx
+++ b/src/content/graphos/enterprise/supergraph-architecture-framework/security.mdx
@@ -4,8 +4,9 @@ subtitle: Protect your data and infrastructure with a defense-in-depth approach
 description: Secure your federated GraphQL API with Apollo GraphOS and a defense-in-depth approach. Prevent data leakage and protect upstream resources.
 ---
 
-The **Security** pillar focuses on ensuring your federated GraphQL API is secure.
+The **Security** pillar focuses on protecting your federated GraphQL API from malicious actors and unintended changes.
 It also outlines how new GraphQL paradigms can work with your organization's existing standards.
+
 Traditional HTTP-based tools often lack GraphQL support.
 This makes it even more critical to use an enterprise-grade GraphQL platform like Apollo GraphOS to run your supergraph.
 
@@ -17,7 +18,7 @@ To effectively protect a GraphQL API, it's crucial to combine a variety of appro
 You can start by using existing security measures.
 These include enforcing authentication and authorization in both the graph and upstream systems.
 
-However, it's also important to prevent data leakage at the "front door" with tools like the Apollo Router.
+It's also important to prevent data leakage at the "front door" with tools like the Apollo Router.
 Combining approaches like these creates a defense-in-depth strategy that maximizes security and protects your data.
 
 ### Protect supergraph infrastructure
@@ -25,11 +26,11 @@ Combining approaches like these creates a defense-in-depth strategy that maximiz
 Open subgraphs and unrestricted permissions can lead to unintended changes.
 You can protect your supergraph infrastructure by following these best practices:
 
-- Assigning and reviewing GraphOS roles and permissions
+- Assigning and reviewing roles and permissions
 - Locking down publishing to production variants
 - Allowing only the graph router to access subgraphs
 
-### Prevent data leakage within the supergraph
+### Prevent data leakage
 
 The supergraph serves as a central data channel for your organization.
 Limiting exposure can prevent potential attackers from gaining access to sensitive information.
@@ -37,7 +38,6 @@ This includes using standard API best practices to prevent injection attacks and
 
 With GraphQL, the schema itself can reveal your API surface area to attackers.
 That's why it's important to turn off introspection in production and follow other GraphQL-specific best practices.
-This principle's practices strengthen your supergraph's security and stop data leaks.
 
 ### Protect upstream resources in the supergraph
 
@@ -49,4 +49,4 @@ Subsequently, they may not have considered the volume of traffic they might have
 This principle's best practice build awareness about these topics.
 
 Ensuring that incidents don't affect other services connected to the supergraph is also crucial.
-Operation safelisting, circuit breakers, and rate limiting are effective techniques for ensuring that resources can cope with the expected API usage.
+Operation safelisting, circuit breaking, and rate limiting are effective techniques for ensuring that resources can cope with the expected API usage.
