--- a/src/content/graphos/enterprise/supergraph-architecture-framework/performance.mdx
+++ b/src/content/graphos/enterprise/supergraph-architecture-framework/performance.mdx
@@ -4,41 +4,38 @@ subtitle: Boost performance with proactive monitoring and continuous improvement
 description: Enhance federated GraphQL API performance with optimization techniques including subscriptions, caching, and observability tools.
 ---
 
-The **Performance** pillar focuses on improving your supergraph's runtime performance and efficiency.
+The **Performance** pillar focuses on improving your supergraph's runtime performance.
 A well-architected supergraph platform not only delivers a great end-user experience.
 It also provides ways for its developers to proactively improve both real and perceived performance.
 Additionally, it gives developers the documentation and tools they need to ship and measure those changes effectively.
 
 ## Principles
 
-### Enable client developers to improve perceived end-user latency
+### Enable developers to improve perceived end-user latency
 
 Improving perceived end-user latency is crucial for organizations that rely on digital services.
 Slow loading times can cause high bounce rates and lower conversion rates, hurting revenue.
-Developers can use the following techniques to improve perceived end-user latency:
+These are some techniques developers can use to improve perceived end-user latency:
 
 - Using response compression
 - Prioritizing data with `@defer`
 - Using subscription/real-time GraphQL features
 
-Providing graph consumers with field-level latency information can also help them make informed choices about operation shapes.
-Configuring trace sampling and using persisted queries can also help reduce request sizes and latency.
-By using these techniques, organizations can improve their user experience and ultimately increase their bottom line.
+Configuring trace sampling and using persisted queries can further also help reduce request sizes and latency.
+Field-level latency metrics can also help graph consumers make informed choices about operation shapes.
 
 ### Enable subgraph developers to improve graph performance
 
-Subgraph developers can also help improve the overall performance of the supergraph by optimizing their subgraph's performance.
-Techniques include:
+Subgraph developers can also help improve the performance of the supergraph by optimizing their subgraph's performance.
+Best practices include:
 
 - Leveraging caching to improve the performance of operations and resolvers
 - Using dataloaders in resolvers
 - Implementing Automatic Persisted Queries (APQs) to improve subgraph request latency
 
-By optimizing their subgraphs, developers can reduce the load on the supergraph and improve its performance.
-
 ### Find opportunities to improve performance
 
 Observability tools can be invaluable in identifying opportunities to improve the supergraph's performance.
-Resolver execution metrics and distributed traces aid developers in understanding and optimizing the performance of individual components.
+Resolver execution metrics and distributed traces aid in optimizing the performance of individual components.
 Additionally, operation traces can help identify bottlenecks and inefficiencies across the system.
 By leveraging these observability tools, teams can proactively address performance issues before they impact end-users.
