Add link to SAF

--- a/src/content/graphos/enterprise/supergraph-architecture-framework/developer-experience.mdx
+++ b/src/content/graphos/enterprise/supergraph-architecture-framework/developer-experience.mdx
@@ -53,3 +53,13 @@ Effective onboarding for new developers is foundational for maximizing developer
 Onboarding is particularly important in supergraph development, given the complexity of the technology involved.
 By investing in onboarding processes and tools, organizations can expedite the learning curve for new developers.
 This ultimately leads to faster development cycles and more efficient use of resources.
+
+<br />
+<TrackableButton
+  size="md"
+  colorScheme="navy"
+  href="https://saf.apollographql.com/"
+  eventName="content_saf"
+>
+  Learn more with the Supergraph Architecture Framework
+</TrackableButton>
