--- a/src/content/graphos/enterprise/supergraph-architecture-framework/index.mdx
+++ b/src/content/graphos/enterprise/supergraph-architecture-framework/index.mdx
@@ -13,11 +13,11 @@ The results of the SAF assessment serve as a roadmap for architecture and platfo
 
 SAF centers its principles and best practices around five pillars:
 
-- [Operational excellence](./operational-excellence.mdx): Efficiently operate, monitor, and manage your supergraph.
-- [Security](./operational-excellence.mdx): Protect your supergraph from intentional and unintentional misuse and breaches.
-- [Reliability](./reliability.mdx): Design your supergraph for scale and high availability.
-- [Performance](./performance.mdx): Improve your supergraph's request and response performance.
-- [Developer experience](./developer-experience.mdx): Boost execution speed for developers producing and consuming the supergraph.
+- [Operational excellence](./operational-excellence): Efficiently operate, monitor, and manage your supergraph.
+- [Security](./operational-excellence): Protect your supergraph from intentional and unintentional misuse and breaches.
+- [Reliability](./reliability): Design your supergraph for scale and high availability.
+- [Performance](./performance): Improve your supergraph's request and response performance.
+- [Developer experience](./developer-experience): Boost execution speed for developers producing and consuming the supergraph.
 
 We recommend reading about each pillar at the beginning of your supergraph journey.
 
