--- a/src/content/graphos/enterprise/supergraph-architecture-framework/performance.mdx
+++ b/src/content/graphos/enterprise/supergraph-architecture-framework/performance.mdx
@@ -39,3 +39,13 @@ Observability tools can be invaluable in identifying opportunities to improve th
 Resolver execution metrics and distributed traces aid in optimizing the performance of individual components.
 Additionally, operation traces can help identify bottlenecks and inefficiencies across the system.
 By leveraging these observability tools, teams can proactively address performance issues before they impact end-users.
+
+<br />
+<TrackableButton
+  size="md"
+  colorScheme="navy"
+  href="https://saf.apollographql.com/"
+  eventName="content_saf"
+>
+  Learn more with the Supergraph Architecture Framework
+</TrackableButton>
