--- a/src/content/graphos/enterprise/supergraph-architecture-framework/reliability.mdx
+++ b/src/content/graphos/enterprise/supergraph-architecture-framework/reliability.mdx
@@ -53,3 +53,13 @@ Best practices include:
 - Staying up-to-date with the latest industry trends and best practices
 
 Teams can minimize the risk of production outages by being proactive about infrastructure and process choices.
+
+<br />
+<TrackableButton
+  size="md"
+  colorScheme="navy"
+  href="https://saf.apollographql.com/"
+  eventName="content_saf"
+>
+  Learn more with the Supergraph Architecture Framework
+</TrackableButton>
