--- a/src/content/graphos/enterprise/supergraph-architecture-framework/security.mdx
+++ b/src/content/graphos/enterprise/supergraph-architecture-framework/security.mdx
@@ -4,6 +4,8 @@ subtitle: Protect your data and infrastructure with a defense-in-depth approach
 description: Secure your federated GraphQL API with Apollo GraphOS and a defense-in-depth approach. Prevent data leakage and protect upstream resources.
 ---
 
+import {ArrowRightIcon} from '../../../../components/Icons';
+
 The **Security** pillar focuses on protecting your federated GraphQL API from malicious actors and unintended changes.
 It also outlines how new GraphQL paradigms can work with your organization's existing standards.
 
@@ -50,3 +52,13 @@ This principle's best practice build awareness about these topics.
 
 Ensuring that incidents don't affect other services connected to the supergraph is also crucial.
 Operation safelisting, circuit breaking, and rate limiting are effective techniques for ensuring that resources can cope with the expected API usage.
+
+<br />
+<TrackableButton
+  size="md"
+  colorScheme="navy"
+  href="https://saf.apollographql.com/"
+  eventName="content_saf"
+>
+  Learn more with the Supergraph Architecture Framework
+</TrackableButton>
