--- a/src/content/graphos/enterprise/supergraph-architecture-framework/operational-excellence.mdx
+++ b/src/content/graphos/enterprise/supergraph-architecture-framework/operational-excellence.mdx
@@ -52,3 +52,13 @@ These include:
 - How to handle breaking changes
 - How to monitor performance
 - How to ensure that the supergraph is always available for clients to consume.
+
+<br />
+<TrackableButton
+  size="md"
+  colorScheme="navy"
+  href="https://saf.apollographql.com/"
+  eventName="content_saf"
+>
+  Learn more with the Supergraph Architecture Framework
+</TrackableButton>
